versions/v2.9/modules/en/pages/about-rancher/architecture/rancher-server-and-components.adoc
= {rancher-product-name} Server and Components
:page-languages: [en, zh]
:revdate: 2024-11-22
:page-revdate: {revdate}
:community-path: reference-guides/rancher-manager-architecture/rancher-server-and-components.adoc 
:product-path: about-rancher/architecture/rancher-server-and-components.adoc
ifeval::["{build-type}" != "community"]
:xref-launch-k8s-with-rancher: xref:cluster-deployment/launch-kubernetes-with-rancher.adoc
:xref-cluster-deployment: xref:cluster-deployment/cluster-deployment.adoc
:xref-hosted-k8s-clusters: xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
:xref-migrate-cluster: xref:rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-launch-k8s-with-rancher: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/index.adoc
:xref-cluster-deployment: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/index.adoc
:xref-hosted-k8s-clusters: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/index.adoc
:xref-migrate-cluster: xref:how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/migrate-rancher-to-new-cluster.adoc
endif::[]

The majority of Rancher 2.x software runs on the Rancher Server. Rancher Server includes all the software components used to manage the entire Rancher deployment.

The figure below illustrates the high-level architecture of Rancher 2.x. The figure depicts a Rancher Server installation that manages two downstream Kubernetes clusters: one created by RKE and another created by Amazon EKS (Elastic Kubernetes Service).

For the best performance and security, we recommend a dedicated Kubernetes cluster for the Rancher management server. Running user workloads on this cluster is not advised. After deploying Rancher, you can {xref-cluster-deployment}[create or import clusters] for running your workloads.

The diagram below shows how users can manipulate both {xref-launch-k8s-with-rancher}[Rancher-launched Kubernetes] clusters and {xref-hosted-k8s-clusters}[hosted Kubernetes] clusters through Rancher's authentication proxy:

.Managing Kubernetes Clusters through Rancher's Authentication Proxy
image::rancher-architecture-rancher-api-server.svg[Architecture]

You can install Rancher on a single node, or on a high-availability Kubernetes cluster.

A high-availability Kubernetes installation is recommended for production.

A Docker installation of Rancher is recommended only for development and testing purposes. The ability to migrate Rancher to a high-availability cluster depends on the Rancher version.

To see deployed resources, run the following command:

[,bash]
----
kubectl get all -n <namespace>
----

If you have administrator privileges, you can also see these resources listed in the Rancher UI:

. Click *☰* and select a cluster.
. Select *More Resources* from the side navigation menu to view deployed resources by type.
. Select *Cluster* > *Projects/Namespaces* from the side navigation menu, then select a namespace,  to view deployed resources by namespace.
The Rancher backup operator can be used to migrate Rancher from the single Docker container install to an installation on a high-availability Kubernetes cluster. For details, refer to the documentation on {xref-migrate-cluster}[migrating Rancher to a new cluster].

The Rancher server, regardless of the installation method, should always run on nodes that are separate from the downstream user clusters that it manages. If Rancher is installed on a high-availability Kubernetes cluster, it should run on a separate cluster from the cluster(s) it manages.
